--- a/Electricity_API/appsettings.json
+++ b/Electricity_API/appsettings.json
@@ -9,8 +9,8 @@
     "UserName": "UserName",
     "Password": "Password"
   },
-  
+
   "ConnectionStrings": {
-    "myConnectionString": "data source=192.168.0.102,1433;initial catalog=Electricity;user id=sa;password=P@ssw0rd;"
+    "myConnectionString": "data source=LAPTOP-IR2GI382;initial catalog=Electricity;user id=sa;password=P@ssw0rd;"
   }
 }
