--- a/Electricity_API/appsettings.json
+++ b/Electricity_API/appsettings.json
@@ -11,6 +11,7 @@
   },
 
   "ConnectionStrings": {
-    "myConnectionString": "Data Source=SQL7003.site4now.net;Initial Catalog=DB_A49D8F_electricity;User Id=DB_A49D8F_electricity_admin;Password=P@ssw0rd;"
+    // "myConnectionString": "Data Source=SQL7003.site4now.net;Initial Catalog=DB_A49D8F_electricity;User Id=DB_A49D8F_electricity_admin;Password=P@ssw0rd;",
+    "myConnectionString": "Data Source=LAPTOP-IR2GI382;Initial Catalog=ElectricityBKP;User Id=sa;Password=P@ssw0rd;"
   }
 }
